--- a/aboutus.html
+++ b/aboutus.html
@@ -126,10 +126,10 @@
             </div>
             
             <ul class="menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="aboutus.html">About</a></li>
                 <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="auth-buttons">
                 <button class="login-btn">Login</button>
