login signup and index updated

--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
             <div class="site-title">
                 <h1>Mauli Creations</h1>
             </div>
-            <div class="search-panel">
-                <input type="text" placeholder="Search...">
-                <button>Search</button>
-            </div>
+            
             <ul class="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">About</a></li>
@@ -26,8 +23,9 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="auth-buttons">
-                <button class="login-btn">Login</button>
-                <button class="signup-btn">Sign Up</button>
+                
+                <button class="login-btn" id="login-btn" >Login</button>
+                <button class="signup-btn" id="signup-btn">Sign Up</button>
             </div>
         </nav>
     </header>
