--- a/aboutus.html
+++ b/aboutus.html
@@ -128,13 +128,37 @@
             <ul class="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">About</a></li>
-                <li><a href="#">Services</a></li>
+                <li><a href="gallery.html">Photo Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="auth-buttons">
-                <button class="login-btn">Login</button>
-                <button class="signup-btn">Sign Up</button>
+                
+                <button class="login-btn" id="login-btn" >Login</button>
+                <button class="signup-btn" id="signup-btn">Sign Up</button>
             </div>
+            <script>
+                document.addEventListener('DOMContentLoaded', function() {
+    // Get the signup button element
+    const signupButton = document.getElementById('signup-btn');
+
+    // Add click event listener to the signup button
+    signupButton.addEventListener('click', function() {
+        // Redirect to the signup.html page
+        window.location.href = 'signup.html';
+    });
+
+    // Get the login button element
+    const loginButton = document.getElementById('login-btn');
+
+    // Add click event listener to the login button
+    loginButton.addEventListener('click', function() {
+        // Redirect to the login.html page
+        window.location.href = 'login.html';
+    });
+});
+
+            </script>
+
         </nav>
     </header>
 
