--- a/signup.html
+++ b/signup.html
@@ -19,7 +19,7 @@
             <ul class="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="aboutus.html">About</a></li>
-                <li><a href="#">Services</a></li>
+                <li><a href="gallery.html">Photo Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="auth-buttons">
